// $Id: CHANGELOG.txt,v 1.178 2007/02/12 17:47:07 dries Exp $

Drupal 6.0, xxxx-xx-xx (development version)
------------------------
- added versioning support to node terms
- made it easier to theme the forum overview page
- Drupal works with error reporting set to E_ALL

Drupal 5.0, 2007-01-15
----------------------
- completely retooled the administration page
    * /admin now contains an administration page which may be themed
    * reorganised administration menu items by task and by module
    * added a status report page with detailed PHP/MySQL/Drupal information
- added web-based installer which can:
    * check installation and run-time requirements
    * automatically generate the database configuration file
    * install pre-made 'install profiles' or distributions
    * import the database structure with automatic table prefixing
    * be localized
- added new default Garland theme
- added color module to change some themes' color schemes
- included the jQuery JavaScript library 1.0.4 and converted all core JavaScript to use it
- introduced the ability to alter mail sent from system
- module system:
    * added .info files for module meta-data
    * added support for module dependencies
    * improved module installation screen
    * moved core modules to their own directories
    * added support for module uninstalling
- added support for different cache backends
- added support for a generic "sites/all" directory.
- usability:
    * added support for auto-complete forms (AJAX) to user profiles.
    * made it possible to instantly assign roles to newly created user accounts.
    * improved configurability of the contact forms.
    * reorganized the settings pages.
    * made it easy to investigate popular search terms.
    * added a 'select all' checkbox and a range select feature to administration tables.
    * simplified the 'break' tag to split teasers from body.
    * use proper capitalization for titles, menu items and operations.